# sumanigashi

./: .gitignore  CLAUDE.md  INTERFACE.md  README.md  ROADMAP.md  pyproject.toml  run_suminagashi.py
_archive/: README.txt  suminagashi.jsx  suminagashi_marbling.py
suminagashi/: __init__.py  __main__.py  app.py  canvas.py  controls.py  engine.py  main_window.py  palettes.py  presets.py
tests/: test_engine.py
